# python-boilerplate

./: .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  main.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: app.yml  docker-image.yml  trivy.yml
inputs/2024/: 01.example  01.in
scripts/: local-setup.sh  pre-requirements.sh
scripts/hooks/: pre-commit
src/: dummy_class.py
src/twenty_four/: day_one.py
tests/: test_dummuy_class.py  test_dummy_class.py
tests/twenty_four/: test_day_one.py
