[project]
name = "python-boilerplate"
version = "0.1.0"
description = "This repository is a Python boilerplate to use as a fast starter point"
authors = [{ name = "Pedro Lopez Mareque", email = "pedro.lopez.mareque@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "ty>=0.0.1a6",
]

[dependency-groups]
test = [
    "doublex>=1.9.6.1",
    "doublex-expects>=0.7.1",
    "expects>=0.9.0",
    "pytest>=7.4.4",
    "pytest-watch>=4.2.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.2",
]

[tool.uv]
default-groups = ["test"]
