[project]
name = "everybody-codes"
version = "0.1.0"
description = "Solutions for https://everybody.codes"
authors = [{ name = "Pedro Lopez Mareque", email = "pedro.lopez.mareque@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"

[dependency-groups]
dev = [
    "doublex>=1.9.6.1",
    "doublex-expects>=0.7.1",
    "expects>=0.9.0",
    "pytest>=7.4.4",
    "ruff>=0.2",
    "ty>=0.0.1a6",
]

[tool.uv]
default-groups = ["dev"]
